--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret=test-secret-key-min-256-bits-aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
